--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
+# Python-generated files
+__pycache__/
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
+
+# Virtual environments
+.venv
+
 # IntelliJ IDEA
 .idea/
-
-# Python
-.venv
-.virtualenv
 
 core.entity_registry
